<resources>
    <string name="app_name">IPP Inventory Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bm_storage">Storage</string>
    <string name="des_scanner">Barcode Scanner to Find Item</string>
    <string name="home_page_hint">Press scan button to start scanning</string>
    <string name="barcode">Barcode</string>
    <string name="productName">Product Name</string>
    <string name="productDesLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="date_time">Date/Time</string>
    <string name="txtScanDate">Date</string>
    <string name="txtScanTime">Time</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="txt_class">Class</string>
    <string name="product">Product</string>
    <string name="vendor">Vendor</string>
    <string name="cross_reference">Cross Reference</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="manual_seed">Manual Seed</string>
    <string name="class_id">Class</string>
    <string name="product_id">Product</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="refresh">REFRESH</string>
    <string name="search_hint">Search product</string>
</resources>
